<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2010-2014 Paul Watts (paulcwatts@gmail.com)
    and individual contributors.

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
-->
<resources>
    <string name="app_name">MyMetro</string>

    <!-- Tutorial -->
    <string name="tutorial_welcome_title">Welcome to MyMetro!</string>
    <string name="tutorial_welcome_text">Tap on a stop (purple dot on the map) to see arrival
        times.
    </string>
    <string name="tutorial_opt_out_dialog_text">Would you like to see popup descriptions for how to
        use MyMetro? You can always turn the popups on or off in Settings, or show the
        tutorial later via Help.
    </string>
    <string name="tutorial_arrival_header_arrival_info_text">This long! Colored background tells you
        if the bus is early (dark indigo) or late (light indigo). On time = normal indigo background. If we don\'t
        know where the bus is, the scheduled time is shown (light purple background).
    </string>
    <string name="location_permissions_message">MyMetro collects location data to enable to show
        your real-time position on the map and automatically select your MyMetro region for your local transit agency
        even when the app is running in background or not in use and it is also used to support advertising.
    </string>
    <string name="storage_permissions_message">To backup or restore your data, MyMetro needs permission to access your local device storage.</string>

    <string name="report_problem_hint">Your reports help MyMetro find and fix problems!</string>
    <!--  Bug report -->
    <string name="bug_report_subject">MyMetro Android: Feedback</string>
    <string name="bug_report_subject_trip_plan">MyMetro Android: Trip Plan Feedback</string>
    <string name="bug_report_subject_trip_plan_fail">MyMetro Android: Trip Plan Failed Feedback</string>

    <string name="preferences_arrival_info_style_options_a">MyMetro classic</string>
    <string name="preferences_db_restored">Restore successful! Please restart MyMetro.</string>
    <string name="preferences_preferred_vibration_summary">Let MyMetro notifications vibrate</string>
    <string name="preferences_preferred_sound_summary">Select the MyMetro notification tone</string>
    <string name="preferences_category_parent_advanced">Parent Advanced</string>
    <string name="preferences_restore_summary">Restores from previous save. After selecting this option you\'ll be asked to pick a file. Please select \"db.backup\" or \"MyMetro.backup\", which will be in a folder \"MyMetroBackups\", likely on your SD card or under your \"Documents\" folder.</string>
    <!--
    <string name="preferences_powered_by_oba_title">MyMetro Web</string>
    <string name="preferences_powered_by_oba_summary">Go to MyMetro web (mobile version)</string>
    -->

    <string name="about_text">
        "Nautilus Technology is an Australian startup technology company with the vision of"
        "creating and accelerating competitive advantages through cutting-edge technology and"
        "solutions.\n\nMyMetro has been launched to provide support to the transit riders of"
        "Adelaide Metro. MyMetro is a free to use real-time transit platform. The real-time"
        "transit data is provided by Adelaide Metro Real-Time Data"
        "Feed (https://www.adelaidemetro.com.au/developer-info).\n\nVisit"
        "https://nautilus-tech.com.au and https://mymetro.au to find out more.\n\nMyMetro"
        "is using the OneBusAway transit platform. OneBusWay is a project of the non-profit"
        "Open Transit Software Foundation (OTSF). It began in 2008 as a graduate student project"
        "by Brian Ferris and Kari Watkins at the University of Washington and evolved to become"
        "the topic of both of their PhD dissertations. Find out more about the OneBusAway"
        "open-source project at https://onebusaway.org.\n\nThe project is licensed under"
        "Apache v2.0 (https://www.apache.org/licenses/LICENSE-2.0)."
    </string>

    <!-- Trip Planner strings -->
    <string name="title_activity_trip_plan">Trip Planner</string>
    <string name="navdrawer_item_plan_trip">Plan a trip</string>

    <!-- See src/main/res/strings.xml for more strings you can override here -->
    <string name="main_help_legend_ontime">Indigo means \"On time\"</string>
    <string name="main_help_legend_late">Light indigo means \"Running late\"</string>
    <string name="main_help_legend_early">Dark indigo means \"Running early\"</string>
    <string name="main_help_legend_scheduled">Light purple means \"Scheduled arrival\" - We don\'t know
        where the bus is now, but the schedule says there is an upcoming arrival
    </string>
    <string name="main_help_legend_canceled">Light purple with strikethrough means the trip has been
        canceled - this bus is NOT coming
    </string>

    <string name="zoom_control_zoom_in">Zoom In</string>
    <string name="zoom_control_zoom_out">Zoom Out</string>

    <string name="application_ignoring_battery_opt_message">Battery optimizations are enabled for
        this application which may decrease the performance of the application. To get the best experience
        from this application, please go to settings and disable performance optimizations for MyMetro.
    </string>
    <string name="main_help_whatsnew">
        <b>Vehicle Feature Icons</b>\n&#8226;\u0020
        Wheelchair Accessibility\n&#8226;\u0020
        Vehicle Speed\n&#8226;\u0020
        Air Condition Availability
        <b>Improved Starred Feature</b>\n&#8226;\u0020
        Multiple tabbed Starred screen\n&#8226;\u0020
        Favourite routes added\n
        <b>Ads Free Subscription</b>\n&#8226;\u0020
        You can now buy Ads Free Subscription\n&#8226;\u0020
        Banner Ad location moved\n&#8226;\u0020
        Interstitial Ad\n
        <b>Trip Planner Bug Fix</b>\n&#8226;\u0020
        OpenTripPlanner v2 Compatible\n
        <b>Rate MyMetro</b>\n&#8226;\u0020
        You can now rate MyMetro!
    </string>
    <string name="navdrawer_item_rate_app">Rate MyMetro</string>
    <string name="rate_title">Enjoying MyMetro?</string>
    <string name="rate_message">If you are enjoying using MyMetro, please take a moment to rate it. Your rating and feedback will help us improving the app.</string>
    <string name="rate_positive">Yes</string>
    <string name="rate_never">Don\'t Show Again</string>
    <string name="rate_remind_later">Remind Me Later</string>
    <string name="analytics_label_button_press_rate_app">rate_app</string>
    <string name="navdrawer_item_remove_ads">Remove Ads</string>
    <string name="remove_ads_title">Remove Ads</string>
    <string name="remove_ads_btn_label">Buy Ads Free Subscription</string>
    <string name="remove_ads_caption">Tired of Ads? Purchase Ads Free Subscription and Remove Them Now!</string>
    <string name="remove_ads_message1">Though we are trying to show ads at a minimal level, we understand that seeing ads sometimes can be annoying. However, ads help us covering the huge cost to keep the infrastructure running on the cloud. It also supports the on going development to improve the app.</string>
    <string name="remove_ads_message2">Purchasing subscription is optional. By purchasing Ads Free Subscription you will enjoy ads free seamless in-app experience. Your purchase will be a great support and much appreciated.</string>
    <string name="remove_ads_message3">Payments will be charged using your Google account. The subscription will be automatically renewed yearly unless you cancel it at least 24 hours before the anniversary of current subscription. You can manage and cancel your subscription from your Google account\'s Subscriptions section. Visit https://play.google.com/store/account/subscriptions</string>
    <string name="remove_ads_message4">By purchasing this subscription you are agreeing to MyMetro Terms of Use https://www.mymetro.au/terms-of-use</string>
    <string name="remove_ads_already_purchased">You already have purchased this subscription.</string>
    <string name="remove_ads_product_unavailable">The subscription is not available in your region.</string>
    <string name="remove_ads_product_not_found">The subscription is not available anymore.</string>
    <string name="remove_ads_system_error">Something went wrong. Please try again later.</string>
    <string name="remove_ads_purchase_successful">Thank you for purchasing the subscription. The subscription will be automatically renewed each year. Visit https://play.google.com/store/account/subscriptions to manage or cancel the subscription.</string>
    <string name="remove_ads_dlg_btn_positive">Buy Now</string>
    <string name="remove_ads_dlg_btn_negative">Don\'t Show Again</string>
    <string name="remove_ads_dlg_btn_neutral">Remind Me Later</string>
    <string name="analytics_label_button_press_remove_ads">remove_ads</string>
    <string name="analytics_label_button_press_buy_ads_free_subscription">buy_ads_free_subscription</string>

    <!-- Trip plan advanced settings -->
    <string name="trip_plan_advanced_settings">Additional Trip Preferences</string>
    <string name="minimize_transfers">Minimize transfers</string>
    <string name="maximum_walk_distance">Maximum walk distance: </string>
    <string name="wheelchair_accessible">Avoid stairs during walk</string>

    <string name="my_option_clear_starred_routes">Remove all starred routes</string>
    <string name="route_info_favorite">Favorite route</string>
    <string name="starred_routes_shortcut">Starred Routes</string>
    <string name="navdrawer_item_starred_stops">Starred stops/routes</string>
    <string name="my_no_starred_routes">You have no starred routes.\n\nYou can add a star to a route on
        the arrivals screen by tapping on the star next to the route name.
    </string>

    <!-- Occupancy -->
    <string name="historically_full">Historically full</string>
    <string name="historically_standing_room">Historically standing room</string>
    <string name="historically_many_seats_available">Historically many seats available</string>
    <string name="historically_few_seats_available">Historically few seats available</string>
    <string name="historically_empty">Historically empty</string>
    <string name="menu_title_about_historical_occupancy">About historical occupancy</string>
    <string name="menu_title_about_occupancy">About occupancy</string>
    <string name="menu_text_about_historical_occupancy">Historical occupancy (faded icon) is an average of trip ridership at this stop over the last 6 months.</string>
    <string name="menu_text_about_realtime_occupancy">Real-time occupancy is shown as one, or two person icons when there are many seats available, few seats available, and is shown as three person icons when the vehicle is full.</string>
</resources>
