<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context="au.mymetro.android.ui.RemoveAdsActivity">

        <FrameLayout
            style="@style/MaterialLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewContent"
                style="@style/MaterialLayoutTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remove_ads_caption"
                android:textAppearance="@style/CustomTitle2"
                android:textColor="@android:color/black"
                android:textSize="20sp" />
        </FrameLayout>

        <FrameLayout
            style="@style/MaterialLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView1"
                style="@style/MaterialLayoutTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remove_ads_message1"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/black"
                android:textSize="14sp" />
        </FrameLayout>

        <FrameLayout
            style="@style/MaterialLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                style="@style/MaterialLayoutTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remove_ads_message2"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/black"
                android:textSize="14sp" />
        </FrameLayout>

        <FrameLayout
            style="@style/MaterialLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:orientation="horizontal">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/productDetailsLayout"
            style="@style/MaterialLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/customborder"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center_vertical|center"
                    android:src="@mipmap/ic_launcher" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/productDetailsTitle"
                        style="@style/Widget.AppCompat.TextView.SpinnerItem"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Ads Free Yearly Subscription"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/body_text_1"
                        android:textSize="12sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/productDetailsDesc"
                        style="@style/Widget.AppCompat.TextView.SpinnerItem"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Subscribe to enjoy seamless ads free in-app experience"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/body_text_2"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/productDetailsPrice"
                        style="@style/Widget.AppCompat.TextView.SpinnerItem"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="AUD 5.99 / Year"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/body_text_2"
                        android:textSize="12sp" />
                </LinearLayout>
            </LinearLayout>
        </FrameLayout>

        <FrameLayout
            style="@style/MaterialLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:id="@+id/purchaseBtn"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center"
                    android:onClick="onBuyAdsFreeSubscriptionBtnClick"
                    android:orientation="horizontal"
                    android:text="@string/remove_ads_btn_label" />

                <TextView
                    android:id="@+id/purchaseStatus"
                    style="@style/MaterialLayoutTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center"
                    android:text="@string/remove_ads_already_purchased"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@android:color/black"
                    android:textSize="12sp"
                    android:textStyle="italic"
                    android:visibility="gone" />
            </LinearLayout>
        </FrameLayout>

        <FrameLayout
            style="@style/MaterialLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:orientation="horizontal">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray" />
        </FrameLayout>

        <FrameLayout
            style="@style/MaterialLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView3"
                style="@style/MaterialLayoutTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remove_ads_message3"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/black"
                android:textSize="12sp" />
        </FrameLayout>

        <FrameLayout
            style="@style/MaterialLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView4"
                style="@style/MaterialLayoutTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:text="@string/remove_ads_message4"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/black"
                android:textSize="12sp" />

        </FrameLayout>

    </LinearLayout>

</ScrollView>